--- a/ngProject/ngProject/ngProject/frontend/src/app/welcome/welcome.component.html
+++ b/ngProject/ngProject/ngProject/frontend/src/app/welcome/welcome.component.html
@@ -1,3 +1,4 @@
 <div>
-  welcome  {{name}}!
+  welcome  {{name}}!<br>
+  You can manage your todos page <a routerLink="/todos">Click here</a>
 </div>
