--- a/ngProject/ngProject/ngProject/frontend/src/app/list-todos/list-todos.component.html
+++ b/ngProject/ngProject/ngProject/frontend/src/app/list-todos/list-todos.component.html
@@ -1,3 +1,13 @@
-<p>
-  list-todos works!
-</p>
+<table border="1">
+  <caption>
+    <thead>
+    <tr><td>Id</td><td>Description</td><td>TargetDate</td><td>Completed?</td></tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let todo of todos">
+      <td>{{todo.id}}</td><td>{{todo.description}}</td>
+      <td>{{todo.targetDate | date |uppercase}}</td><td>{{todo.done}}</td>
+    </tr>
+    </tbody>
+  </caption>
+</table>
