--- a/ngProject/ngProject/ngProject/frontend/src/app/welcome/welcome.component.html
+++ b/ngProject/ngProject/ngProject/frontend/src/app/welcome/welcome.component.html
@@ -1,4 +1,5 @@
-<div>
+<h1> Welcome....</h1>
+<div class="container">
   welcome  {{name}}!<br>
   You can manage your todos page <a routerLink="/todos">Click here</a>
 </div>
