--- a/ngProject/ngProject/ngProject/frontend/src/app/app.component.html
+++ b/ngProject/ngProject/ngProject/frontend/src/app/app.component.html
@@ -9,4 +9,12 @@
 
 <app-welcome></app-welcome>
 <app-login></app-login>-->
-<router-outlet></router-outlet>
+<app-app-header></app-app-header>
+<app-menu></app-menu>
+<Br><Br><Br>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<br><br><br>
+<app-app-footer></app-app-footer>
