--- a/ngProject/ngProject/ngProject/frontend/src/app/login/login.component.html
+++ b/ngProject/ngProject/ngProject/frontend/src/app/login/login.component.html
@@ -1,8 +1,12 @@
-<small *ngIf="invalidlogin">{{error}}</small>
+<h1>Login!!!</h1>
+<div class="container">
+  <div class="alert alert-warning" *ngIf="invalidlogin">{{error}}</div>
+
+</div>
 
 <div>
 Username :<input type="text" name="username" value="{{username}}" [(ngModel)]="username">
 <br><br>
-Password :<input type="password" name="psw" value="{{psw}}" [(ngModel)]="psw">
-<button (click)=handleLogin()>Login</button>
+Password :<input type="password" name="psw" value="{{psw}}" [(ngModel)]="psw"><br>
+<button (click)=handleLogin() class="btn btn-success">Login</button>
 </div>
